Change link text from 'View Code' to 'GitHub'

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               </svg>
             </a>
             <a href="https://github.com/tanishkhub/49app" target="_blank" class="project-link">
-              <span>View Code</span>
+              <span>GitHub</span>
             </a>
           </div>
         </div>
