Update logo text in 404.html

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Navigation -->
   <nav class="main-nav">
-    <a href="/" class="nav-logo">TS</a>
+    <a href="/" class="nav-logo">ꪻᦓ</a>
     
     <div class="nav-links">
       <a href="/#work">Work</a>
@@ -98,7 +98,7 @@
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
-        <span class="footer-logo">TS</span>
+        <span class="footer-logo">ꪻᦓ</span>
         <p>&copy; 2025 Tanishk Shrivastava</p>
       </div>
       
