Update footer copyright year dynamically

--- a/404.html
+++ b/404.html
@@ -99,7 +99,10 @@
     <div class="footer-content">
       <div class="footer-left">
         <span class="footer-logo">ꪻᦓ</span>
-        <p>&copy; 2025 Tanishk Shrivastava</p>
+<p>
+  &copy; <script>document.write(new Date().getFullYear())</script> 
+  Tanishk Shrivastava. All rights reserved.
+</p>
       </div>
       
       <div class="footer-links">
